ingress/pod1_nginx_80.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-server1
  labels:
    name: nginx-server1
spec:
  containers:
  - name: nginx-server1
    image: nginx
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
