ingress/pod2_http_80.yml
apiVersion: v1
kind: Pod
metadata:
  name: apache-server2
  labels:
    name: apache-server2
spec:
  containers:
  - name: apache-server2
    image: httpd
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
