ingress/service_pod1.yml
apiVersion: v1
kind: Service
metadata:
  name: service-pod1
spec:
  selector:
    name: apache-server1
  ports:
  - port: 90
    targetPort: 80
  type: LoadBalancer
