ingress/service_pod2.yml
apiVersion: v1
kind: Service
metadata:
  name: service-pod2
spec:
  selector:
    name: apache-server2
  ports:
  - port: 100
    targetPort: 80
  type: LoadBalancer
